MCP Tool and REST scaffolding purchase tickets Resources, Use Cases and Services